[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Wind/Assets/Wind.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.479624, 1 )
colors = PoolColorArray( 1, 1, 1, 0.784314, 1, 1, 1, 0 )

[node name="Wind" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 7 )
lifetime_randomness = 0.8
emission_shape = 2
emission_rect_extents = Vector2( 8, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 16.0
color_ramp = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Wind_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Wind_body_exited"]
